--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- clickMusic() -->
     <img id="music_ico" onclick="" alt="" style=" display: inline; float: right;  ">
 
-    <audio id="audioDom" src="music.mp3" preload="auto"
+    <audio id="audioDom" src="./music.mp3" preload="auto"
         loop="loop"></audio>
     <div id="wish_text"></div>
 
